{
    "name": "Controls",
    "maps": [
        {
            "name": "Gamepad",
            "id": "cc043e93-f0a2-4ec2-ac79-92143599dd8e",
            "actions": [
                {
                    "name": "LeftX",
                    "type": "Value",
                    "id": "2a3e3904-f12c-42c5-b116-287252af83cd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftY",
                    "type": "Value",
                    "id": "0a600195-d80e-4281-81b4-f335886d10a5",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightX",
                    "type": "Value",
                    "id": "2bdb4d74-47de-4311-811b-b2dfe19d00cd",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightY",
                    "type": "Value",
                    "id": "1cb48a97-0a6e-4fa8-b517-c5cdd72649a4",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RB",
                    "type": "Button",
                    "id": "73c154ae-9032-4edf-8e3d-e72c6d89796c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "40ab42c9-a302-425e-b590-17fd28188fba",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81af58a3-be85-43f0-b3b5-d4c5e411ed1c",
                    "path": "<Gamepad>/leftStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b6206ec-174d-43c4-9d41-4e4d682e6064",
                    "path": "<Gamepad>/rightStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d94fe9bd-7a5f-450e-9792-1c9cebc01695",
                    "path": "<Gamepad>/rightStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31731566-61c8-4b56-87f4-6c3199eb759d",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RB",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}